# warc-gpt

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.Docker.md  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  wsgi.py
.github/: dependabot.yml
tests/: .test.env  conftest.py  test_cli.py
warc_gpt/: __init__.py
warc_gpt/commands/: __init__.py  ingest.py  visualize.py
warc_gpt/static/: index.css  index.js  state.js
warc_gpt/static/components/: ChatBubble.css  ChatBubble.js  ChatFlow.css  ChatFlow.js  ChatInput.css  ChatInput.js  InspectDialog.css  InspectDialog.js  SettingsDialog.css  SettingsDialog.js
warc_gpt/templates/: index.html
warc_gpt/utils/: __init__.py  check_env.py  get_limiter.py  list_available_models.py
warc_gpt/utils/vector_storage/: __init__.py  base.py  chroma.py  qdrant.py
warc_gpt/views/: __init__.py  api.py  ui.py
warc_gpt/views/api/: __init__.py  complete.py  models.py  search.py
