[tool.poetry]
authors = ["Harvard Library Innovation Lab"]
description = "WARC + RAG + LLM. Experimental pipeline using retrieval augmented generation techniques to explore web archive collections."
license = "MIT"
name = "warc-gpt"
readme = "README.md"
version = "0.1.4"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
brotlipy = "^0.7.0"
chromadb = "^0.4.14"
click = "^8.1.7"
flask = "^3.0.0"
flask-limiter = "^3.5.1"
langchain = "^0.1.7"
ollama = "^0.1.7"
openai = "^1.14.0"
pandas = "^2.1.3"
plotly = "^5.18.0"
pypdf = "^4.0.1"
python = "^3.11"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
python-slugify = "^8.0.1"
requests = "^2.31.0"
scikit-learn = "^1.3.2"
sentence-transformers = "^2.2.2"
torch = "^2.1.1"
warcio = "^1.7.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 100
