[tool.poetry]
authors = ["Harvard Library Innovation Lab"]
description = "WARC + RAG + LLM. Experimental pipeline using retrieval augmented generation techniques to explore web archive collections."
license = "MIT"
name = "warc-gpt"
readme = "README.md"
version = "0.1.8"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
brotlipy = "^0.7.0"
chromadb = "^0.5.11"
click = "^8.1.7"
flask = "^3.0.0"
flask-limiter = "^3.8.0"
langchain = "^0.3.0"
ollama = "^0.3.3"
openai = "^1.47.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
pypdf = "^5.0.1"
python = "^3.11"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
python-slugify = "^8.0.1"
requests = "^2.32.3"
scikit-learn = "^1.5.2"
sentence-transformers = "^3.1.1"
torch = "^2.4.1"
warcio = "^1.7.4"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 100
